- The server SSL certificate and private key can now be reloaded without requiring a server
  restart, simply use: /REHASH -ssl
- Small compile fix for above
- Fixed /SAJOIN able to join insecure users to +z channels, reported by phedny (#0002601).
- Fixed SSL crash problem due to previous SSL change.
- Fixed some bugs in webtv code that could have caused trouble in the future (off by one),
  reported by Ilja van Sprundel.
- Module coders: Fixed CALLBACKTYPE_CLOAK_EX, it was not working properly at all.
- Fixed bug in MODE #channel showing extended channel mode parameters when not in #channel.
- Made 'MODE #channel b' and friends show bans to ircops even when not in channel.
- Fix for channel mode +f: It incorrectly didn't eat a paramter on unset (ouch!), even
  though it always acted like it did in the MODE line sent to the channel. This bug caused
  desynchs in some cases. Bug reported by Korfio (#0003048).
- Fixes to SVSNICK: case-change no longer causes a collision, don't return the value from
  exit_client (which would be FLUSH_BUFFER), fix QUIT not being sent back on collision.
- Fix for above so it doesn't -r the client.
- Fixed small memory leak in resolver (~40 bytes when connecting to a server)
- Made Unreal use the original name in case of a CNAME, instead of the forwarded name,
  reported by jerrcsnet (#0003054).
- The "looking up your hostname" message was always sent, regardless of show-connect-info.
- Kick non-SSL users when the channel turns out to be +z during netmerge, reported by
  Ron2K (#0002942).
- Windows 2003: Fixed UnrealIRCd unable to boot if no DNS server is configured, we now
  fallback to set::dns::nameserver in such a case. Thanks to Romeo (reporter, #0002802)
  and Bock for tracing this down.
- Fixed cloak cutoff problem with long hosts.
- Added doc/help.tr.conf (Turkish), translated by Diablo.
- Added doc/example.tr.conf (Turkish), translated by ironic.
- Fixed zlib version check: 1.x is compatible with all 1.*, etc. (#0002966).