@@ -72,7 +72,7 @@ DLLFUNC int MOD_INIT(m_chgname)(ModuleInfo *modinfo)
 	 * We call our add_Command crap here
 	*/
 	add_Command(MSG_CHGNAME, TOK_CHGNAME, m_chgname, 2);
-        add_Command(MSG_SVSNAME, TOK_CHGNAME, m_chgname, 2);
+	add_Command(MSG_SVSNAME, NULL, m_chgname, 2);
 	MARK_AS_OFFICIAL_MODULE(modinfo);
 	return MOD_SUCCESS;
 }
@@ -93,7 +93,7 @@ DLLFUNC int MOD_UNLOAD(m_chgname)(int module_unload)
 		sendto_realops("Failed to delete command chgname when unloading %s",
 				MOD_HEADER(m_chgname).name);
 	}
-	if (del_Command(MSG_SVSNAME, TOK_CHGNAME, m_chgname) < 0)
+	if (del_Command(MSG_SVSNAME, NULL, m_chgname) < 0)
 	{
 		sendto_realops("Failed to delete command svsname when unloading %s",
 				MOD_HEADER(m_chgname).name);
